# NexusRAG

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test_import.py
.github/workflows/: README.md  ci.yml
docs/: advanced_features.md  concepts.md  index.md  installation.md  quickstart.md
docs/api/: index.md  pipeline.md
docs/api/embedders/: base.md  index.md
docs/api/llms/: base.md  index.md
docs/api/parsers/: base.md  index.md
docs/api/vectorstores/: base.md  index.md
examples/: README.md  advanced_usage.py  basic_usage.py  comprehensive_example.py  custom_components.py  document_processing_example.py  enhanced_knowledge_graph_example.py  free_api_example.py  generation_reasoning_example.py  knowledge_graph_example.py  multimodal_example.py  ollama_example.py  quickstart.py  retrieval_example.py
nexusrag/: README.md  __init__.py  api.py  chunking.py  cli.py  enhanced_pipeline.py  knowledge_graph.py  metadata_filter.py  multimodal.py  pipeline.py  rag.py
nexusrag/agents/: basic_agent.py
nexusrag/chunking/: __init__.py  document_chunker.py  semantic.py  sentence.py  universal.py
nexusrag/config/: default.yaml  manager.py
nexusrag/embedders/: base.py  cohere.py  gemini.py  openai.py  sentence_transformers.py  universal.py
nexusrag/evaluation/: benchmark.py  metrics.py
nexusrag/generation/: __init__.py  constrained.py  universal.py
nexusrag/llms/: anthropic.py  base.py  gemini.py  huggingface.py  ollama.py  openai.py  orchestrator.py  universal.py
nexusrag/metadata/: __init__.py  extractor.py
nexusrag/multimodal/: __init__.py  audio_processor.py  image_processor.py  pdf_processor.py  table_processor.py  universal.py
nexusrag/parsers/: advanced_pdf.py  audio.py  base.py  html.py  image.py  markdown.py  pdf.py  text.py  universal.py  video.py  word.py
nexusrag/processors/: __init__.py  table_processor.py
nexusrag/reasoning/: __init__.py  citation.py  multi_step.py
nexusrag/retrievers/: __init__.py  bm25.py  cross_modal.py  hybrid.py  reranker.py  universal.py
nexusrag/vectorstores/: base.py  chroma.py  pinecone.py  qdrant.py  universal.py  weaviate.py
scripts/: benchmark.py  create_test_pdf.py  evaluate.py  integration_test.py  run_tests.py  test_components.py  validate_structure.py
tests/: test_advanced_features.py  test_cli.py  test_gemini.py  test_imports.py  test_integration.py  test_knowledge_graph.py  test_ollama.py  test_pipeline.py
