[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusrag"
version = "0.1.0"
description = "An open-source framework for building autonomous AI agents that reason over complex, multimodal data."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "unstructured>=0.10.10",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.15",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "pymupdf>=1.23.5",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.2",
    "openai>=1.3.5",
    "cohere>=4.37",
    "pinecone-client>=2.2.4",
    "weaviate-client>=3.24.2",
    "anthropic>=0.18.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
    "flask>=2.3.0",  # For REST API
    "scikit-learn>=1.3.0",  # For evaluation metrics
    # Multimodal processing dependencies
    "openai-whisper>=20231107",  # For audio/video transcription
    "pandas>=2.0.0",  # For table processing
    "numpy>=1.24.0",  # For numerical operations
    # Retrieval engine dependencies
    "qdrant-client>=1.9.0",  # For Qdrant vector database
    "bm25s>=0.1.0",  # For BM25 keyword search
    # Generation and reasoning dependencies
    "lmql>=0.0.6",  # For constrained generation
    "vllm>=0.2.0",  # For high-performance inference
    # CLI and runtime dependencies
    "rich>=13.0.0",  # For CLI formatting
    "deprecation>=2.1.0",  # For deprecation warnings
    
[project.optional-dependencies]
test = [
    "pytest>=7.0",
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/NexusRAG"
Repository = "https://github.com/your-username/NexusRAG"
Documentation = "https://github.com/your-username/NexusRAG/blob/main/README.md"

[project.scripts]
nexusrag = "nexusrag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexusrag*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
